# FastSkills

./: .gitignore  CLAUDE.md  LICENSE  duckduckgo-search.skill  install.sh  package-lock.json  package.json  pyproject.toml  readme.md
.claude/: settings.local.json
prompt/: gold_standard_prompt.yaml
skills/duckduckgo-search/: SKILL.md
skills/duckduckgo-search/scripts/: search.py
skills/duckduckgo-websearch/: SKILL.md  pyproject.toml
skills/duckduckgo-websearch/references/: api_reference.md
skills/duckduckgo-websearch/scripts/: example.py  search.py
src/: fastskills_cli.py  fastskills_sessions.py  mcp_server.py
src/tui/: __init__.py  app.py  constants.py  helpers.py  settings.py
src/tui/screens/: __init__.py  dialogs.py  setup.py
src/tui/styles/: main.tcss  setup.tcss
src/tui/widgets/: __init__.py  chat_view.py  command_palette.py  conversation_list.py  input_area.py  loading_indicator.py  message_display.py  status_bar.py
